--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8887
+
+github.client.id=ae4d7b7f585c5d24f28f 
+github.client.secret=aaf5f0e079bca8865cbb89cba6bab5d22ee60fc5
+github.redirect.uri=http://localhost:8887/callback
+
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
