--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,15 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.58</version>
         </dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.16</version>
+		</dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.200</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.17</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
