--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <version>1.2.58</version>
         </dependency>
         <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>6.0.8</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.16</version>
@@ -78,16 +83,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.flywaydb</groupId>
-                <artifactId>flyway-maven-plugin</artifactId>
-                <version>6.0.8</version>
-                <configuration>
-                    <url>jdbc:mysql://localhost:3306/community?serverTimezone=UTC</url>
-                    <user>root</user>
-                    <password>123456</password>
-                </configuration>
             </plugin>
         </plugins>
     </build>
