提交问题&获取GitHub用户头像’;

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mx/mx-utils -->
+        <dependency>
+            <groupId>org.mx</groupId>
+            <artifactId>mx-utils</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
